Fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -423,7 +423,7 @@ ul {
     position: relative;
     display: inline-block;
     padding: 10px 30px;
-    margin: 12px auto;
+    margin: 20px auto;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 2px;
